web-infras/parser/tests/fixtures/esprima/ES6/identifier/invalid_function_await/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,17)
1|export function await() {}
 |               ^
